--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name" : "sjquan",
+    "name" : "快来长乐",
     "appid" : "__UNI__6F57953",
     "description" : "",
     "versionName" : "1.0.0",
@@ -49,10 +49,7 @@
                 "desc" : "测试"
             }
         },
-		"requiredPrivateInfos": [
-		    "getLocation"
-		]
-		
+        "requiredPrivateInfos" : [ "getLocation" ]
     },
     "vueVersion" : "2"
 }
